--- a/_posts/2016-02-05-mccoy.md
+++ b/_posts/2016-02-05-mccoy.md
@@ -1,5 +1,8 @@
-***Encountering the Unexpected Other: On Building an Intellectual Commons\
-***
+---
+layout: post
+title:  "Encountering the Unexpected Other: On Building an Intellectual Commons"
+author: Gabe McCoy
+---
 
 The process of deciding upon a mutually agreeable topic for exploration for a collaboratively created syllabus between my partner and I was actually a relatively quick one. It was going to be hacker subcultures; it was *always* going to be hacker subcultures. My selected partner, Sean, was a tech journalist with two decades of experience who currently works as a writer and editor for a widely-recognized technology news website. One of the areas of focus in his reporting has been hacker subcultures; he has always made a conscious attempt to portray them in a way that he feels is fair and accurate. In my case, I had just finished earning my Master’s degree in Library and Information Science at the University of Illinois, and had moved on to a PhD program in Media Studies at the same university. Like Sean, my interests largely revolved around research interests revolve mainly around digitally-based communities and subcultures, with my questions stemming from issues of representation and identity. This includes both the identity of individuals within a particular digitally-based subculture and of the subcultures as a whole when viewed from an outside perspective. While Sean’s approach was entirely journalistic, my own approach was academic—and that placed us squarely “outside” each other’s disciplines. More importantly—and perhaps most appealingly to me—he was someone with whom I have maintained a close friendship for nearly a decade. Although I knew that the idea of reaching across disciplines for this project, in all honestly, terrified me, I figured with Sean, our work together would be a cinch.
 
@@ -13,7 +16,7 @@ By the end of that meeting, I was mildly shaken and utterly confused. Our perspe
 
 My collaborator has been a tech journalist since I was in elementary school; as a result, his priorities and sensibilities regarding topical importance are tightly related to the popular definition of “news.” Meanwhile, my own priorities and sensibilities were largely informed by my time in academia, during which I have extensively focused on feminist and, to a lesser extent, post-colonial narratives. Both of us were using the approach that was most natural for us, and we were both used to our preferred perspective dominating the work that we created. When it came to course design, however, our perspectives were apparently wholly incompatible. The design of the course dictated that we provide the students early on with the fundamental information that they would need in order to navigate increasingly specific and advanced course topics. Our differing perspectives made agreeing upon these fundamentals nigh-impossible. Additionally, the nature of our project and our own personal investments in the topic made both of us reluctant to reconsider the primacy of our perspectives. I felt as though creating our project as a syllabus placed it squarely in the academic realm, and that therefore my philosophical concerns should take precedence. Meanwhile, he felt as though the fact that it was billed as a journalism course placed it squarely within his realm, and that his concern with the popular parlance and news-worthiness should determine its philosophical sensibilities. We were, it appeared, at a nearly complete impasse. It seemed to me then that our collaboration would be a complete disaster.
 
-Reflecting on the stubbornness the exercise surprisingly brought out in us brought to mind the semester’s earlier readings—in particular, Tapscott & Williams’ *Wikinomics: How Mass Collaboration Changes Everything*. I recalled how in it, the authors describe the intractability of various companies who were wedded to their own particular points of view and business plans and perspectives. For them, the prospect of open-source culture represented a threat to their internal culture and to the integrity of their finished products as they related to a closed system of values and priorities. While collaborating with a single collaborator is by no means mass collaboration, I thought to myself about how in practice for me, the weight of its challenge felt no less real and no less impassable. Considering such positions, it occurred to me moreover, that, the fact that we came from such wildly disparate backgrounds mean that it could be the case that it wasn’t just us as individuals who were collaborating; but how it could be, in a way, the entirety of our professional and academic backgrounds that were drawn together, face to face, into this standoff. These perspectives – journalistic and academic, each of which insisted unhesitatingly upon its own ethical positions and methods -- were developed through years of exposure to individuals within and perspectives unique to our history and experience. And as a result, could it then be that both of us were acting as representatives of the mass population of our field? That we as individuals were each in a sense channeling those many others? In the scenario of the traditional companies Tapscott & William write about, who are all faced with the prospect of networked-age disruption, we were each treating the other like the unwashed masses of a wiki-type culture. Both of us felt as though we were facing an overwhelming threat, a flood of outside perspectives that threatened to overwhelm the principles – “our” principles -- that we brought to the table. Like those companies, we had to adjust our perspectives in order to accommodate and incorporate the perspectives of those masses without losing sight of what we wanted to create. We had to find a means to recognize the other in ourselves.
+Reflecting on the stubbornness the exercise surprisingly brought out in us brought to mind the semester’s earlier readings—in particular, Tapscott & Williams’ *Wikinomics: How Mass Collaboration Changes Everything*. I recalled how in it, the authors describe the intractability of various companies who were wedded to their own particular points of view and business plans and perspectives. For them, the prospect of open-source culture represented a threat to their internal culture and to the integrity of their finished products as they related to a closed system of values and priorities. While collaborating with a single collaborator is by no means mass collaboration, I thought to myself about how in practice for me, the weight of its challenge felt no less real and no less impassable. Considering such positions, it occurred to me moreover, that, the fact that we came from such wildly disparate backgrounds mean that it could be the case that it wasn’t just us as individuals who were collaborating; but how it could be, in a way, the entirety of our professional and academic backgrounds that were drawn together, face to face, into this standoff. These perspectives — journalistic and academic, each of which insisted unhesitatingly upon its own ethical positions and methods — were developed through years of exposure to individuals within and perspectives unique to our history and experience. And as a result, could it then be that both of us were acting as representatives of the mass population of our field? That we as individuals were each in a sense channeling those many others? In the scenario of the traditional companies Tapscott & William write about, who are all faced with the prospect of networked-age disruption, we were each treating the other like the unwashed masses of a wiki-type culture. Both of us felt as though we were facing an overwhelming threat, a flood of outside perspectives that threatened to overwhelm the principles — “our” principles — that we brought to the table. Like those companies, we had to adjust our perspectives in order to accommodate and incorporate the perspectives of those masses without losing sight of what we wanted to create. We had to find a means to recognize the other in ourselves.
 
 Once our tempers had cooled, we began the difficult task of rebuilding. The intensity and intractability of our conflict impressed upon us the knowledge that negotiating our intersecting and only scantly overlapping perspectives required us to take the time to collaborate more thoughtfully and efficiently. Our infrequent meetings weren’t long enough to cover the amount of ground necessary for us to come to an agreeable compromise. Eventually, we settled upon using an unformatted, collaborative document in Google Drive in order to facilitate informal communication without coordinating our widely disparate schedules. This new method of contact also had the benefit of reinforcing a non-proprietary and non-hierarchal dynamic between us as collaborators; as co-owners of the document, we held equal power over its organization and development. At first, its format was rigid and categorical, consisting of subject headings such as “Schedule” and “Readings”, each of which contained a number of quick, bullet-pointed notes. As the document evolved, however, those categories disappeared into a simulacrum of casual conversation. Over the course of several days, the headings and the subjects they summarized were either modified into near-unrecognizability or removed entirely, and the entire document became a brainstorm of openly-shared ideas interspersed with friendly banter. This drastically changed the tone of the conversation; it became less confrontational in its tone and more friendly in its disagreement. Eventually, it began to resemble the way in which we’d collaborated on our past excursions into genre fiction. In that endeavor, neither of us felt the need to proprietarily guard our own ideas and ideology; instead, we incorporated them almost without active discussion, using our knowledge of each other’s personality and strengths to coordinate and compromise without the need for active discussion.
 
