--- a/_posts/2016-02-05-atienza.md
+++ b/_posts/2016-02-05-atienza.md
@@ -6,25 +6,25 @@ author: Mike Atienza
 
 Randy and I were band geeks since middle school.<sup><a href="#note1">1</a></sup> Our love for jazz, good food, and an investment in upholding integrity in our everyday adolescent lives made us close friends. Randy is now a social media manager for one of the largest online companies in the world. He was the first person I thought of when I was tasked for the final project of a graduate seminar on Collaboration Systems I had enrolled for, to collaborate in the co-design of a syllabus for an imagined interdisciplinary course with a partner of our choice.
 
-Outside of selecting a partner outside our “home discipline,” there were few other confining parameters for the assignment. Nonetheless, much more than a standard final paper for a graduate seminar, the project both overwhelmed and energized me. *I had already gotten to experience teaching a semester long course where I structured the syllabus in collaboration with mentors and colleagues based on my masters training in Southeast Asian studies. But* *having the chance to design a NEW* *course, and one moreover that would be designed with another person* *and non-anthropologist, was something else entirely*. Many thoughts circled my mind about the potentials of this exercise: What a great chance to add to my academic professional tool kit. What central themes would I draw on? How would I draw in what I had learned from the mistakes and successes of earlier teaching instances? But also: Did you remember how difficult creating that first syllabus on your own was? *Could* *drawing in a collaborator ease and lighten the process?*
+Outside of selecting a partner outside our “home discipline,” there were few other confining parameters for the assignment. Nonetheless, much more than a standard final paper for a graduate seminar, the project both overwhelmed and energized me. I had already gotten to experience teaching a semester long course where I structured the syllabus in collaboration with mentors and colleagues based on my masters training in Southeast Asian studies. But having the chance to design a NEW course, and one moreover that would be designed with another person and non-anthropologist, was something else entirely. Many thoughts circled my mind about the potentials of this exercise: What a great chance to add to my academic professional tool kit. What central themes would I draw on? How would I draw in what I had learned from the mistakes and successes of earlier teaching instances? But also: Did you remember how difficult creating that first syllabus on your own was? Could drawing in a collaborator ease and lighten the process?
 
-*For the better part, my time as an* *early stage (pre-ABD) doctoral* *student has been spent developing (or trying to!) my dissertation* *project on queer intimacies of Philippine migrant men through mobile app platforms.* *So it seemed natural* to take my current dissertation project themes as a starting point, and decide to create a syllabus about technology and its daily uses. The prospect of collaborating with a corporate social media administrator (*even one who’d been a childhood friend*), however, opened up another set of new challenges for me. These included negotiating the goals of a privatized institution, proposing critical scholarship and genealogies of sociotechnical infrastructures of the everyday,<sup><a href="#note2">2</a></sup> and reflecting upon what the similarities, differences and compromises could be when working across professional boundaries that are often deemed unthinkable or inappropriate? *All, for sure, have been big questions and challenges that theoretical readings I gotten to read in my* *anthropology classes underscored that my field had coped with before (Simakova 2012; Yagi and Kleinberg 2011; Star and Griesemer 1989). More recently, controversy over the means by which U.S.* *academic social scientists collaborating with* *Facebook for its now infamous “Emotion Manipulation Study”*<sup><a href="#note3">3</a></sup> *demonstrates the extent to which* *academic social* *science has been asking these questions* *and that I now found myself encountering this* *on-the-ground exercise.*
+For the better part, my time as an early stage (pre-ABD) doctoral student has been spent developing (or trying to!) my dissertation project on queer intimacies of Philippine migrant men through mobile app platforms. So it seemed natural to take my current dissertation project themes as a starting point, and decide to create a syllabus about technology and its daily uses. The prospect of collaborating with a corporate social media administrator (even one who’d been a childhood friend), however, opened up another set of new challenges for me. These included negotiating the goals of a privatized institution, proposing critical scholarship and genealogies of sociotechnical infrastructures of the everyday,<sup><a href="#note2">2</a></sup> and reflecting upon what the similarities, differences and compromises could be when working across professional boundaries that are often deemed unthinkable or inappropriate? All, for sure, have been big questions and challenges that theoretical readings I gotten to read in my anthropology classes underscored that my field had coped with before (Simakova 2012; Yagi and Kleinberg 2011; Star and Griesemer 1989). More recently, controversy over the means by which U.S. academic social scientists collaborating with Facebook for its now infamous “Emotion Manipulation Study”<sup><a href="#note3">3</a></sup> demonstrates the extent to which academic social science has been asking these questions and that I now found myself encountering this on-the-ground exercise.
 
-We were both interested in how humans were using social media but informed through different lenses: Randy’s corporate business model and my interdisciplinary approach to human-machine configurations*, centrally informed* *by anthropologist Lucy Suchman’s (1987; 2007)* *nuanced and relational configuration between human and machine interactions* *developed* *during her own interdisciplinary collaborations with the field of Human-Computer Interaction and research as an ethnographer with* *Xerox-PARC. From such a perspective*, an examination of relational technology use in our everyday lives must include an analysis of power structures and its contributions to intersecting (dis)junctures and asymmetrical relations between various user communities.
+We were both interested in how humans were using social media but informed through different lenses: Randy’s corporate business model and my interdisciplinary approach to human-machine configurations, centrally informed by anthropologist Lucy Suchman’s (1987; 2007) nuanced and relational configuration between human and machine interactions developed during her own interdisciplinary collaborations with the field of Human-Computer Interaction and research as an ethnographer with Xerox-PARC. From such a perspective, an examination of relational technology use in our everyday lives must include an analysis of power structures and its contributions to intersecting (dis)junctures and asymmetrical relations between various user communities.
 
-*Two other readings assigned for the graduate seminar also guided my thinking and approach to the goals of collaboration*: Paulo Freire’s “Pedagogy of the Oppressed” and Henry Giroux’s “Literacy, Pedagogy, and the Politics of Difference.” Alongside Freire and Giroux, I hoped to develop a collaborative design strategy for this proposed undergraduate course syllabus that would employ problem-posing educational tactics, provide an analysis of structural power within frameworks of education, and keep an open dialogue with the learning public that would stay attuned to contingent literacies. *No small goals, indeed.* With studies pointing to the increasing omnipresent relationship between people and technologies, I wanted to create a course that examines how technologies have always been part and parcel of how we go about our lives and establish social connections, but without leaving out information about access to media technologies and the various power asymmetries that are designed into these infrastructures. *With such ambitions in mind (why, after all, enter graduate school with modest goals?),* I aimed for my course to address questions related to such gaps in scholarship such as: How do our various social identities contribute to what types of technologies we use in our everyday lives? What are the various communities in the U.S. left silent from these studies? How do U.S. media consumers compare to other communities around the world?
+Two other readings assigned for the graduate seminar also guided my thinking and approach to the goals of collaboration: Paulo Freire’s “Pedagogy of the Oppressed” and Henry Giroux’s “Literacy, Pedagogy, and the Politics of Difference.” Alongside Freire and Giroux, I hoped to develop a collaborative design strategy for this proposed undergraduate course syllabus that would employ problem-posing educational tactics, provide an analysis of structural power within frameworks of education, and keep an open dialogue with the learning public that would stay attuned to contingent literacies. No small goals, indeed. With studies pointing to the increasing omnipresent relationship between people and technologies, I wanted to create a course that examines how technologies have always been part and parcel of how we go about our lives and establish social connections, but without leaving out information about access to media technologies and the various power asymmetries that are designed into these infrastructures. With such ambitions in mind (why, after all, enter graduate school with modest goals?), I aimed for my course to address questions related to such gaps in scholarship such as: How do our various social identities contribute to what types of technologies we use in our everyday lives? What are the various communities in the U.S. left silent from these studies? How do U.S. media consumers compare to other communities around the world?
 
-The majority of the course themes and topics, *we had decided together, could* circulate around contemporary social media genres and its everyday uses around the world with a slight bias toward U.S.-centered research studies. *But despite* *of* *the ease in that common decision, larger differences around basic framings and exercises percolated up.* I remember an interesting distinction on how we named our object of study. I proposed a project to Randy where we would elaborate on corporate data mining strategies so we may be able to educate users of the stakes when sharing personal information with social media platforms like Facebook or so called anonymous whisper applications like Yik Yak. Randy understood what I wanted to address in our project, but he explained it to me as *“*social listening.*”* Social media listening had been a long-time tactic of gathering consumer information to assist businesses in understanding how people were using the various online platforms associated with their brand and products. The naming of the data-mining process as “listening” dampens the potential risks consumers buy into for sharing so much of their personal information. The word choice fails to acknowledge the act of information mining and data extraction that is taking place between the user and agent. Even to consider “eavesdropping” as a substitute to social listening seems lacking of the potential dangers of surveillance and unchecked information acquisition. Recognizing the different ways of framing our object of study served as a frictive moment in the collaboration process. Randy described it as a mutual exchange between consumers and corporate actors. He explained to me that businesses should be able to acquire and use the information gathered from consumers for the “free” services they provided. It was my realization*, then,* that Randy’s stakes were aligned more with the corporate model of social listening—one that allows for a different understanding of ethical practices with an emphasis on fine-tuning marketing strategies and hopes of greater consumption of goods.
+The majority of the course themes and topics, we had decided together, could circulate around contemporary social media genres and its everyday uses around the world with a slight bias toward U.S.-centered research studies. But despite of the ease in that common decision, larger differences around basic framings and exercises percolated up. I remember an interesting distinction on how we named our object of study. I proposed a project to Randy where we would elaborate on corporate data mining strategies so we may be able to educate users of the stakes when sharing personal information with social media platforms like Facebook or so called anonymous whisper applications like Yik Yak. Randy understood what I wanted to address in our project, but he explained it to me as “social listening.” Social media listening had been a long-time tactic of gathering consumer information to assist businesses in understanding how people were using the various online platforms associated with their brand and products. The naming of the data-mining process as “listening” dampens the potential risks consumers buy into for sharing so much of their personal information. The word choice fails to acknowledge the act of information mining and data extraction that is taking place between the user and agent. Even to consider “eavesdropping” as a substitute to social listening seems lacking of the potential dangers of surveillance and unchecked information acquisition. Recognizing the different ways of framing our object of study served as a frictive moment in the collaboration process. Randy described it as a mutual exchange between consumers and corporate actors. He explained to me that businesses should be able to acquire and use the information gathered from consumers for the “free” services they provided. It was my realization, then, that Randy’s stakes were aligned more with the corporate model of social listening—one that allows for a different understanding of ethical practices with an emphasis on fine-tuning marketing strategies and hopes of greater consumption of goods.
 
-*Meanwhile, mine were more inspired by* Freire’s call to examine standard student-teacher relationships. As Freire examines the structures and arrangements of liberal education as a concept related to banking or a mere depositing of knowledge, he called for an intervention or a problem-posing model that engages learning publics to critically examine their positionalities within established social constructions or institutional hierarchies. As he wrote, "The educator constantly re-forms his reflections in the reflections of the students \[who\] are now critical co-investigators in dialogue with the teacher … Problem-posing education involves a constant unveiling of reality, the emergence of consciousness, and critical intervention in reality." (Friere 68) I focused on the framing structures of our course co-design and left out spaces for Randy and I to unfold our differing perspectives on user/consumer praxis. So, I began thinking of how the syllabus would be configured as a living document in order to allow the course community to shift objectives accordingly as the semester moved along. It would be a base suggestion where I could hope to incorporate student strengths and work with student weaknesses to provide engaged learning experiences. Keeping an open dialogue about the learning process points toward transparency of curricular requirements in addition to (re)shaping the ways learning publics interact with higher education infrastructures would be key. *But* *these were surely as foreign aims to Randy as “social listening” was to me. (And I hadn’t considered the extent to which my own reflections could be re-formed in the process of collaborating with Randy.)* Prior to starting the planning of the course with Randy, I assumed that corporations and their agents were homogenous entities that only cared about making profits. Although I still hold firm with that perspective, my collaboration with Randy demonstrated that my assumptions illuminated a blind spot in how I, as a media scholar, and perhaps academia in general understood knowledge exchange between unthinkable partners or institutions. I needed to turn the critical lens toward myself and recognize the complexities that Randy must navigate with his corporate networks. Problem-posing education begins from the point of course design and not merely when the semester begins.
+Meanwhile, mine were more inspired by Freire’s call to examine standard student-teacher relationships. As Freire examines the structures and arrangements of liberal education as a concept related to banking or a mere depositing of knowledge, he called for an intervention or a problem-posing model that engages learning publics to critically examine their positionalities within established social constructions or institutional hierarchies. As he wrote, "The educator constantly re-forms his reflections in the reflections of the students \[who\] are now critical co-investigators in dialogue with the teacher … Problem-posing education involves a constant unveiling of reality, the emergence of consciousness, and critical intervention in reality." (Friere 68) I focused on the framing structures of our course co-design and left out spaces for Randy and I to unfold our differing perspectives on user/consumer praxis. So, I began thinking of how the syllabus would be configured as a living document in order to allow the course community to shift objectives accordingly as the semester moved along. It would be a base suggestion where I could hope to incorporate student strengths and work with student weaknesses to provide engaged learning experiences. Keeping an open dialogue about the learning process points toward transparency of curricular requirements in addition to (re)shaping the ways learning publics interact with higher education infrastructures would be key. But these were surely as foreign aims to Randy as “social listening” was to me. (And I hadn’t considered the extent to which my own reflections could be re-formed in the process of collaborating with Randy.) Prior to starting the planning of the course with Randy, I assumed that corporations and their agents were homogenous entities that only cared about making profits. Although I still hold firm with that perspective, my collaboration with Randy demonstrated that my assumptions illuminated a blind spot in how I, as a media scholar, and perhaps academia in general understood knowledge exchange between unthinkable partners or institutions. I needed to turn the critical lens toward myself and recognize the complexities that Randy must navigate with his corporate networks. Problem-posing education begins from the point of course design and not merely when the semester begins.
 
 Understanding our own investments in the here and now of this project as well as building upon years of earned respect, I did not expect, for instance, difficulties in finding commonalities that would produce teachable moments informed in our multiple perspectives. I believed that Randy’s personal ethical values would hold firm against the benign beliefs of corporate exchange in the practice of social listening. I failed to consider the intricacies that form corporate posturing itself and assumed that we understood each others’ interpretations on the business of acquiring consumer information. But moving forward, our collaboration became more than completing a project. This collaboration became an opportunity to interrogate various conversations circulating from multiple discursive and ideological spheres. Randy and I met through digital communication five times within a span of eight weeks. These discussions and brainstorming sessions lasted about an hour and it often began with checking up on personal events and gauging perspectives on current issues circulating through various media and communication sources at that time. I explained the purpose of the collaborative syllabus project and offered to provide access to scholarly and course materials to help orient my collaborator. He also provided me with a large volume of online resources to help me more understand how marketing ecologies transform social media user information into shareable commodity. The sheer amount of information circulating within his marketing publics was immense. It was a daunting task to review catalogs of online articles and blogs that ranged from business pitch protocols to market driven case studies on prosumer activity. We vowed to review materials and check back the following week.
 
-Schedules, as it turned out though, hardly matched up and three weeks passed before we finally had a chance to talk again. *And more concretely, I was becoming increasingly aware of how our different approaches to the field and* *practice of user studies was clearly causing a breach of communication.* *RANDY OCCASIONLY WOULD RESPOND WITH PERPLEXION AT MY CRITICAL STANCES ON* *CORPORATE MARKING INSTITUTIONS.* Initially, I interpreted these responses as discomfort in engaging with harsh critiques on the infrastructures where he belongs. *But it became clearer to me over time that* these were his colleagues. And the systems *I was writing and thinking abstractly about* were ones upon which they had built careers. One of our conversations included his explanation about the necessities of serving ads in these platforms and how our personal information becomes the transferable monetary equivalent for the social media services we are provided “free of charge.” We began discussing the social and economic implications of this arrangement in relation to my scholarly archive on social media users. Kim Fortun and Mike Fortun’s concept of collaborative friendship that is “conceived as a way of relating to others that demands reciprocity yet tolerates times out of joint” was a way to think through this point in the collaboration process. (2005: 51) At the end of these conversations, I recognized that I also have to take into account my collaborator’s investments and attachments to the object of study. I began to think through the ways our collaboration would yield a balance perspective that would engage the learning public in a problem-posing way. It became apparent to me that I would need to find different ways of translating how I am asking questions about social media listening to my collaborator. I wanted us to understand the pedagogical stakes about this object of study and develop a mutual understanding of how we may both become invested in the outcome.
+Schedules, as it turned out though, hardly matched up and three weeks passed before we finally had a chance to talk again. And more concretely, I was becoming increasingly aware of how our different approaches to the field and practice of user studies was clearly causing a breach of communication. RANDY OCCASIONLY WOULD RESPOND WITH PERPLEXION AT MY CRITICAL STANCES ON CORPORATE MARKING INSTITUTIONS. Initially, I interpreted these responses as discomfort in engaging with harsh critiques on the infrastructures where he belongs. But it became clearer to me over time that these were his colleagues. And the systems I was writing and thinking abstractly about were ones upon which they had built careers. One of our conversations included his explanation about the necessities of serving ads in these platforms and how our personal information becomes the transferable monetary equivalent for the social media services we are provided “free of charge.” We began discussing the social and economic implications of this arrangement in relation to my scholarly archive on social media users. Kim Fortun and Mike Fortun’s concept of collaborative friendship that is “conceived as a way of relating to others that demands reciprocity yet tolerates times out of joint” was a way to think through this point in the collaboration process. (2005: 51) At the end of these conversations, I recognized that I also have to take into account my collaborator’s investments and attachments to the object of study. I began to think through the ways our collaboration would yield a balance perspective that would engage the learning public in a problem-posing way. It became apparent to me that I would need to find different ways of translating how I am asking questions about social media listening to my collaborator. I wanted us to understand the pedagogical stakes about this object of study and develop a mutual understanding of how we may both become invested in the outcome.
 
-As collaborative meetings came and went, decisions were made – mutually -- to focus the collaboration on a particular segment within a larger conceptual module in order to make progress in the completion of the project. I titled the segment, “Information Overload: Data Acquisition and the Public/Private Divide” and placed it in the middle portion of the course. It situated the module within a larger conceptual framing of “networked asymmetries and (dis)junctures,” the collaboration resulted in gathering teaching materials to think through the amount of personal information being archived, collected, and used as capital within marketing economies. These marketing infrastructures produce directed content to social media users based on the personal data gathered from their online profiles and activities that are then repurposed and sold to specific media sites and genres. The scholarly pieces on social listening and data mining which the doctoral student researched were paired with blog commentaries and industry statements on the utilities of making sense of user surveillance and information gathering that were matched to the information synthesized during our collaborative digital communications. As foreshadowed through advising meetings with our seminar professor, Dr. Anita Say Chan, I had to take on the larger conceptualization and design of the semester long course syllabus. The potentialities and possibilities of our collaborative assignment veiled the difficulties in translating conceptual, pedagogical, and ideological goals for a problem-posing pedagogy.
+As collaborative meetings came and went, decisions were made — mutually — to focus the collaboration on a particular segment within a larger conceptual module in order to make progress in the completion of the project. I titled the segment, “Information Overload: Data Acquisition and the Public/Private Divide” and placed it in the middle portion of the course. It situated the module within a larger conceptual framing of “networked asymmetries and (dis)junctures,” the collaboration resulted in gathering teaching materials to think through the amount of personal information being archived, collected, and used as capital within marketing economies. These marketing infrastructures produce directed content to social media users based on the personal data gathered from their online profiles and activities that are then repurposed and sold to specific media sites and genres. The scholarly pieces on social listening and data mining which the doctoral student researched were paired with blog commentaries and industry statements on the utilities of making sense of user surveillance and information gathering that were matched to the information synthesized during our collaborative digital communications. As foreshadowed through advising meetings with our seminar professor, Dr. Anita Say Chan, I had to take on the larger conceptualization and design of the semester long course syllabus. The potentialities and possibilities of our collaborative assignment veiled the difficulties in translating conceptual, pedagogical, and ideological goals for a problem-posing pedagogy.
 
-*Additional* *design decisions emerged in the midst of my developing conversations with Randy.* Other than the total re-figuring of the syllabus, I added social media marketing documents and online sites from Randy’s archives. I was not aware of the large knowledge networks within the marketing industry until Randy brought them to my attention. Instead of dismissing them as mere propaganda, I added them as learning tools in parallel conversation with the interdisciplinary scholarship I previously collected. Upon further research and deep thought on how to organize curricular materials on these topics, I decided to assemble the course within the broad concept of sociotechnical infrastructures. The knowledge formation of sociotechnical systems came from historical studies of industrial societies that focused on the development of sociality through technologies (Pfaffenberger 1992). Susan Leigh Star (1999) writes that infrastructures are both “relational and ecological” where its meanings pertaining to different things and groups of people are never the same but relies on the inseparable connections between bodies and objects sharing the same environment. Additionally, Brian Larkin (2013) adds that infrastructures are both organizing material and ideological constructions that mediate the flow and exchange of goods or information through space and time. Infrastuctures may be theorized in diverse ways. They include technologies and networked machines, financial instruments and organizational techniques, biological schemas and physical measurements, and even social practices that are informed through unequal socio-political and economic work. (Larkin: 338-9) *But my growing conversations with Randy heightened my consciousness about how sociotechnical infrastructures weren’t so much abstract concepts, but spaces that defined engagements – like a simple Facebook update – that were routine parts of our everyday interactions.* Thinking through the complex figurations and assemblages that make up sociotechnical infrastructures over various temporalities, spatialities, and genealogies, this course design strives to provide an interdisciplinary vantage with a slant toward anthropological perspectives toward the study of technologies and its daily uses. It was clear that the main theme and even activities within the course change in the process of thinking through how a public/private collaboration may yield a semester-long theoretical inquiry. The seminar’s goals to think about the fraught configurations and utilization of collaboration in contemporary information infrastructures played itself out through the exchange between my collaborator and myself.
+Additional design decisions emerged in the midst of my developing conversations with Randy. Other than the total re-figuring of the syllabus, I added social media marketing documents and online sites from Randy’s archives. I was not aware of the large knowledge networks within the marketing industry until Randy brought them to my attention. Instead of dismissing them as mere propaganda, I added them as learning tools in parallel conversation with the interdisciplinary scholarship I previously collected. Upon further research and deep thought on how to organize curricular materials on these topics, I decided to assemble the course within the broad concept of sociotechnical infrastructures. The knowledge formation of sociotechnical systems came from historical studies of industrial societies that focused on the development of sociality through technologies (Pfaffenberger 1992). Susan Leigh Star (1999) writes that infrastructures are both “relational and ecological” where its meanings pertaining to different things and groups of people are never the same but relies on the inseparable connections between bodies and objects sharing the same environment. Additionally, Brian Larkin (2013) adds that infrastructures are both organizing material and ideological constructions that mediate the flow and exchange of goods or information through space and time. Infrastuctures may be theorized in diverse ways. They include technologies and networked machines, financial instruments and organizational techniques, biological schemas and physical measurements, and even social practices that are informed through unequal socio-political and economic work. (Larkin: 338–39) But my growing conversations with Randy heightened my consciousness about how sociotechnical infrastructures weren’t so much abstract concepts, but spaces that defined engagements — like a simple Facebook update — that were routine parts of our everyday interactions. Thinking through the complex figurations and assemblages that make up sociotechnical infrastructures over various temporalities, spatialities, and genealogies, this course design strives to provide an interdisciplinary vantage with a slant toward anthropological perspectives toward the study of technologies and its daily uses. It was clear that the main theme and even activities within the course change in the process of thinking through how a public/private collaboration may yield a semester-long theoretical inquiry. The seminar’s goals to think about the fraught configurations and utilization of collaboration in contemporary information infrastructures played itself out through the exchange between my collaborator and myself.
 
 When it was time to demo “Information Overload” to the seminar, I explained our process and the citation choices in framing the exercise. Problem posing strategies around the topic of privacy continue to be novel and necessary as online data acquisition processes are becoming ubiquitous and interwoven with everyday human-machine transactions. Highlighting the choice of assigned readings, one from a popular media source and two from interdisciplinary scholarship pertaining to the genealogies, functionalities, and critical analysis on data mining and social listening, took me back to that frictive moment of collaboration. The exchange of resources between Randy and I reoriented the ways I thought about data mining. When it came time to demonstrate our exercise, Randy took the lead. His charisma bled through the live video stream as he led us to think about the advertisements being served on our personal Facebook news feed wall. One classmate shared an ad on their news feed pertaining to Amazon.com that may have been a result of recent purchases from the online retail distributor. But other classmates questioned the ads they were seeing. One seminar participant saw an ad for an online shoe retailer, but they explained that they hardly purchase shoes online. Randy explained that social listening practices suggest advertisement options based on interests with users on your social networks. The classroom space demonstrated what the platform was doing versus the hype and excitement of social listening. These data-mining tactics are far from perfect, but Randy explained that with enough user feedback the industry hopes to perfect its trade.
 
@@ -32,9 +32,13 @@ Going back to Paulo Freire’s concept of problem-solving education, it acknowle
 
 ## Works cited
 
-Fortun, Kim, and Mike Fortun. "Scientific imaginaries and ethical plateaus in contemporary US toxicology." *American Anthropologist* 107.1 (2005): 43-54.
+Fortun, Kim, and Mike Fortun. "Scientific imaginaries and ethical plateaus in
 
-Freire, Paulo. “Chapter 2” in *Pedagogy of the Oppressed*, trans. Myra Bergman Ramos*. New York: Continuum (1970). Online.
+> contemporary US toxicology." *American Anthropologist* 107.1 (2005): 43–54.
+
+Freire, Paulo. “Chapter 2” in *Pedagogy of the Oppressed*, trans. Myra Bergman Ramos*. *
+
+> *New York: Continuum* (1970). Online.
 
 Giroux, Henry A. "Literacy, pedagogy, and the politics of difference." *College Literature*
 
@@ -84,4 +88,4 @@ perspective on negotiating and leveraging cross-cultural identity." *Journal of 
 
 <a name="note2"/>The perspective of this paper comes solely from the anthropology doctoral student. I will offer a copy of this final paper to my collaborator for his records and will ask if he would like to respond with his own side of our collaboration.
 
-<a name="note3"/>For additional information, see Gregory S. McNeal. “Facebook Manipulated User News Feeds to Create Emotional Response.” *Forbes*. 28 June 2014. http://www.forbes.com/sites/gregorymcneal/2014/06/28/facebook-manipulated-user-news-feeds-to-create-emotional-contagion/.
+<a name="note3"/>For additional information, see Gregory S. McNeal. [“Facebook Manipulated User News Feeds to Create Emotional Response.”](http://www.forbes.com/sites/gregorymcneal/2014/06/28/facebook-manipulated-user-news-feeds-to-create-emotional-contagion/) *Forbes*. 28 June 2014.
