--- a/_posts/2016-02-05-atienza.md
+++ b/_posts/2016-02-05-atienza.md
@@ -84,8 +84,11 @@ perspective on negotiating and leveraging cross-cultural identity." *Journal of 
 
 *International Business Studies* 42, no. 5 (2011): 629-653.
 
-<a name="note1"/>Randy is a pseudonym for my collaborator. I made the decision to change given names and not to disclose the company name to ensure confidentiality in hopes of avoiding potential issues that may arise with the circulation of this information and ties with our collaboration.
 
-<a name="note2"/>The perspective of this paper comes solely from the anthropology doctoral student. I will offer a copy of this final paper to my collaborator for his records and will ask if he would like to respond with his own side of our collaboration.
+## Footnotes
 
-<a name="note3"/>For additional information, see Gregory S. McNeal. [“Facebook Manipulated User News Feeds to Create Emotional Response.”](http://www.forbes.com/sites/gregorymcneal/2014/06/28/facebook-manipulated-user-news-feeds-to-create-emotional-contagion/) *Forbes*. 28 June 2014.
+<a name="note1"/>1. Randy is a pseudonym for my collaborator. I made the decision to change given names and not to disclose the company name to ensure confidentiality in hopes of avoiding potential issues that may arise with the circulation of this information and ties with our collaboration.
+
+<a name="note2"/>2. The perspective of this paper comes solely from the anthropology doctoral student. I will offer a copy of this final paper to my collaborator for his records and will ask if he would like to respond with his own side of our collaboration.
+
+<a name="note3"/>3. For additional information, see Gregory S. McNeal. [“Facebook Manipulated User News Feeds to Create Emotional Response.”](http://www.forbes.com/sites/gregorymcneal/2014/06/28/facebook-manipulated-user-news-feeds-to-create-emotional-contagion/) *Forbes*. 28 June 2014.
