small edits on last three

--- a/_posts/2016-02-05-prutzer.md
+++ b/_posts/2016-02-05-prutzer.md
@@ -46,7 +46,7 @@ There are several projects covered in the syllabus where this focus on otherness
 
 Fittingly, the title of this chapter has a double meaning. It refers to the traffic inherent both in mapping the social and in our collaborative project on mapping the social. Different disciplinary orientations renders traffic inevitable, but that traffic also carries great potential. The main lessons Maja and I learned are that collaborators must be prepared to work together to forge interactional expertise within the epistemological collisions that unfold and to represent those collisions in a way that demystifies backstage tensions. Mapping itself entails navigating traffic. I see no reason to avoid that within academic work, and plenty of reason to welcome it.
 
-References
+## References
 
 1\. Chris Cesare, “Why Ants Don’t Get into Traffic Jams,” 10 April 2015, accessed July 2, 2015, retrieved from http://news.sciencemag.org/plants-animals/2015/04/why-ants-don-t-get-traffic-jams.
 
