--- a/_posts/2016-02-05-seifert.md
+++ b/_posts/2016-02-05-seifert.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Opening the *White Cube* and Finding it Empty: Codesigning a Pedagogy for Art In the Streets"
+title:  "Opening the <i>White Cube</i> and Finding it Empty: Codesigning a Pedagogy for Art In the Streets"
 author: Melissa Seifert
 ---
 
